fix modal z-index

--- a/src/style/components/_call-modal.scss
+++ b/src/style/components/_call-modal.scss
@@ -1,5 +1,6 @@
 .jquery-modal {
   &.blocker {
+    z-index: 100;
     background: rgba(246, 247, 250, 0.9);
   }
 }
